Fix a minor z-index layering issue

--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -60,7 +60,7 @@
 	--vb-double: calc(var(--vb) * 2);
 	--margin-offset: 2rem;
 
-	--z-set: 1;
+	--z-set: 0;
 	--z-top: 10;
 }
 
